--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,18 @@
 {
-	"ignore": [
-		"node_modules/**/*"
-		],
-		"presets": [
-			"es2015",
-			"stage-0"
-		],
-	"plugins": [
-		"transform-runtime"
-	]
+    "ignore": ["node_modules/**/*"],
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "ie": 11
+                },
+                "useBuiltIns": "usage",
+                "corejs": 3
+            }
+        ]
+    ],
+    "plugins": [
+        ["@babel/plugin-proposal-class-properties"]
+    ]
 }
