--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,29 @@
+root: true
 parser: "babel-eslint"
+parserOptions:
+    ecmaVersion: 2017
+    sourceType: "module"
+    allowImportExportEverywhere: false
+
+globals:
+    $: true
+    // axios: true
+
 env:
     es6: true
     browser: true
     node: true
+    mocha: true
 rules:
+
     arrow-parens: [1, 'as-needed']
     arrow-spacing: [1, {before: true, after: true}]
     accessor-pairs: 2
     block-scoped-var: 2
-    brace-style: [0, '1tbs']
-    camelcase: 1
-    comma-dangle: [2, 'never']
+    // brace-style: [0, '1tbs']
+    camelcase: [2, {properties: "never"}]
+    // camelcase: [2, {ignoreList: ['UNSAFE_componentDidMount', '_id$', '^UNSAFE_']}]
+    // comma-dangle: [2, 'always-multiline']
     comma-spacing: [2, {before: false, after: true}]
     comma-style: [2, 'last']
     complexity: [1, 11]
@@ -30,7 +43,7 @@ rules:
     guard-for-in: 1
     handle-callback-err: 0
     id-length: [2, {min: 1, max: 30}]
-    indent: [2, 'tab', {SwitchCase: 1}]
+    // indent: [2, 'tab', {SwitchCase: 1}]
     key-spacing: [2, {beforeColon: false, afterColon: true}]
     lines-around-comment: 0
     linebreak-style: [0, 'unix']
@@ -86,7 +99,7 @@ rules:
     no-loop-func: 2
     no-mixed-requires: [0, false]
     no-mixed-spaces-and-tabs: [2, false]
-    no-multi-spaces: 2
+    no-multi-spaces: [2, {"exceptions": {"VariableDeclarator": true}}]
     no-multi-str: 2
     no-multiple-empty-lines: [0, {max: 2}]
     no-native-reassign: 2
@@ -156,9 +169,15 @@ rules:
     keyword-spacing: [2, {before: false, after: true, overrides: {
             return: {after: true},
             throw: {after: true},
-            case: {after: true}
+            case: {after: true},
+            from: {before: true},
+            else: {before: true},
+            catch: {before: true},
+            finally: {before: true},
+            of: {before: true},
+            as: {before: true}
         }}]
-    space-before-function-paren: [2, {anonymous: 'always', named: 'never'}]
+    space-before-function-paren: [2, {anonymous: 'never', named: 'never'}]
     space-in-parens: 0
     space-infix-ops: 2
     space-unary-ops: [2, {words: true, nonwords: false}]
