--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "stylus"
   ],
   "scripts": {
-    "start": "gulp --debug",
+    "start": "gulp --inspect --watch-poll",
     "build": "gulp build",
     "production": "cross-env NODE_ENV=production npm-run-all clean build",
     "make-block": "babel-node make-block.js",
-    "lint:scripts": "eslint app gulp",
-    "lint:styles": "gulp styles:lint",
-    "lint:templates": "gulp templates:lint",
+    "lint:scripts": "gulp scriptsWatch",
+    "lint:styles": "gulp stylesLint",
+    "lint:templates": "gulp templatesLint",
     "lint": "npm-run-all -p lint:*",
     "predeploy": "npm run production",
     "deploy": "gulp deploy",
@@ -55,79 +55,98 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer-stylus": "^0.9.0",
-    "babel": "^6.5.0",
-    "babel-cli": "^6.5.0",
-    "babel-core": "^6.5.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.22.0",
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.7.7",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/register": "^7.7.4",
+    "@babel/runtime": "^7.7.4",
+    "autoprefixer-stylus": "^1.0.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "bemto.jade": "^1.0.0",
     "browser-sync": "^2.10.0",
+    "connect-history-api-fallback": "^1.6.0",
+    "core-js": "^3.4.4",
     "cross-env": "^1.0.7",
     "debuga": "^1.0.2",
-    "eslint": "^2.12.0",
-    "eslint-loader": "^1.1.1",
-    "expose-loader": "^0.7.1",
-    "gulp": "^3.9.0",
-    "gulp-bump": "^1.0.0",
-    "gulp-cached": "^1.1.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-cssnano": "^2.0.0",
-    "gulp-filter": "^3.0.1",
+    "emitty": "^1.4.0",
+    "eslint": "^6.7.1",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^3.0.2",
+    "expose-loader": "^0.7.5",
+    "gulp": "^4.0.2",
+    "gulp-bump": "^3.1.3",
+    "gulp-cached": "^1.1.1",
+    "gulp-changed": "^4.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-csso": "^4.0.1",
+    "gulp-filter": "^6.0.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-group-css-media-queries": "^1.1.0",
-    "gulp-if": "^2.0.0",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.2.0",
     "gulp-jade": "^1.1.0",
     "gulp-jade-inheritance": "^0.5.3",
     "gulp-jsbeautifier": "^1.0.1",
-    "gulp-plumber": "^1.0.1",
+    "gulp-plumber": "^1.2.1",
     "gulp-plumber-error-handler": "^1.0.0",
+    "gulp-progeny": "^0.4.1",
     "gulp-pug-linter": "^0.4.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-static-hash": "^0.1.4",
-    "gulp-stylint": "^3.0.0",
-    "gulp-stylus": "^2.1.0",
-    "gulp-svg-symbols": "^1.0.0",
+    "gulp-stylint": "^4.0.2",
+    "gulp-stylus": "^2.7.0",
+    "gulp-svg-symbols": "^3.2.3",
     "gulp-watch": "^4.3.5",
     "gulp-zip": "^3.0.0",
-    "gulp.spritesmith-multi": "^2.2.0",
-    "happypack": "^2.1.1",
+    "gulp.spritesmith": "^6.11.0",
+    "gulp.spritesmith-multi": "3.1.0",
+    "http-proxy-middleware": "^1.0.0",
     "husky": "^0.11.9",
     "jade-get-data": "^1.0.0",
     "jade-injected": "^1.0.2",
-    "jquery": "^2.1.4",
-    "merge-stream": "^1.0.0",
+    "jquery": "^3.5.0",
+    "map-stream": "^0.0.7",
+    "merge-stream": "2.0.0",
     "node-notifier": "^4.3.1",
-    "npm-install-webpack-plugin": "^2.0.2",
     "npm-run-all": "^1.8.0",
+    "path": "^0.12.7",
+    "prop-types": "^15.7.2",
+    "pug": "^2.0.4",
     "pug-lint": "^2.2.2",
-    "remodal": "^1.1.1",
-    "require-dir": "^0.3.0",
+    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
+    "raw-loader": "^4.0.0",
+    "require-dir": "^1.2.0",
     "rimraf": "^2.5.0",
     "run-sequence": "^1.2.2",
-    "rupture": "^0.6.1",
+    "rupture": "^0.7.1",
     "source-map-loader": "^0.1.5",
-    "spritesmith-dir-checker": "^1.0.0",
+    "spritesmith-dir-checker": "^1.0.1",
     "spritesmith-stylus-retina-template": "^1.0.0",
-    "stylint": "^1.3.6",
-    "stylint-stylish": "^1.2.0",
-    "stylus": "^0.54.5",
+    "style-loader": "^1.1.3",
+    "stylint": "^2.0.0",
+    "stylint-stylish": "^2.0.0",
+    "stylus": "^0.54.7",
     "stylus-import-if-exist": "^1.1.0",
+    "stylus-loader": "^3.0.2",
     "stylus-svg-size-template": "^1.0.0",
     "svg4everybody": "^2.0.0",
-    "webpack": "^1.12.9",
-    "webpack-stats-logger": "^1.0.1",
-    "webpack-stream": "^3.1.0"
+    "vinyl-buffer": "^1.0.1",
+    "webpack": "^4.41.2",
+    "webpack-stream": "^5.2.1"
   },
   "dependencies": {
-    "grunt-cli": "^1.2.0",
     "js-cookie": "^2.1.4",
     "jscrollpane": "^2.0.22",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "remodal": "^1.1.1"
   }
 }
